--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.2|^7.0.1",
-        "inertiajs/inertia-laravel": "^0.2.8",
+        "inertiajs/inertia-laravel": "^0.2.12",
         "laravel/framework": "^8.4",
         "laravel/horizon": "^5.0",
         "laravel/tinker": "^2.0",
@@ -45,12 +45,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
