--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.2|^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.12",
+        "laravel/cashier": "^12.3",
         "laravel/framework": "^8.4",
         "laravel/horizon": "^5.0",
         "laravel/tinker": "^2.0",
