--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
+CASHIER_MODEL=App\Models\User
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
