--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.15",
+        "portal-vue": "^2.1.7",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11",
         "tailwindcss": "^1.9.0",
+        "v-click-outside": "^3.0.1",
         "vue": "^2.6.11",
-        "portal-vue": "^2.1.7",
-        "vue-meta": "^2.4.0",
         "vue-clipboard2": "^0.3.1",
-        "vuex": "^3.5.1",
-        "v-click-outside": "^3.0.1"
+        "vue-meta": "^2.4.0",
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.5.1"
     }
 }
