--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/ui": "^2.1",
         "league/glide": "^1.6",
         "pragmarx/google2fa-laravel": "^1.3",
+        "predis/predis": "^1.1",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
