--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -18,18 +16,25 @@
         "axios": "^0.19",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.18",
         "lodash": "^4.17.15",
         "portal-vue": "^2.1.7",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.9.6",
+        "tailwindcss": "^2.1.2",
         "v-click-outside": "^3.0.1",
         "vue": "^2.6.11",
         "vue-clipboard2": "^0.3.1",
+        "vue-loader": "^15.9.6",
         "vue-meta": "^2.4.0",
         "vue-template-compiler": "^2.6.11",
         "vuex": "^3.5.1"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.3.2",
+        "@tailwindcss/typography": "^0.4.0",
+        "autoprefixer": "^10.2.5",
+        "postcss": "^8.2.13"
     }
 }
