--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "facade/ignition": "^2.3",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/dusk": "^6.15",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^8.5"
