--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
         "cloudflare/sdk": "^1.1",
         "fideloper/proxy": "^4.2",
@@ -20,7 +20,7 @@
         "laravel/framework": "^8.4",
         "laravel/horizon": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1",
+        "laravel/ui": "^2.1|^3.3.0",
         "league/glide": "^1.6",
         "pragmarx/google2fa-laravel": "^1.3",
         "predis/predis": "^1.1",
