--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.2|^7.0.1",
-        "inertiajs/inertia-laravel": "^0.3.1",
+        "inertiajs/inertia-laravel": "^v0.4.3",
         "laravel/cashier": "^12.3",
         "laravel/framework": "^8.4",
         "laravel/horizon": "^5.0",
@@ -24,7 +24,7 @@
         "league/glide": "^1.6",
         "pragmarx/google2fa-laravel": "^1.3",
         "predis/predis": "^1.1",
-        "tightenco/ziggy": "^0.9.4"
+        "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
