--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.2|^7.0.1",
         "inertiajs/inertia-laravel": "^v0.4.3",
-        "laravel/cashier": "^12.3",
-        "laravel/framework": "^8.4",
-        "laravel/horizon": "^5.0",
+        "laravel/cashier": "^12.16",
+        "laravel/framework": "^v8.80.0",
+        "laravel/horizon": "^5.8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1|^3.3.0",
         "league/glide": "^1.6",
