--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0.2",
         "ext-json": "*",
-        "cloudflare/sdk": "^1.1",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.2|^7.0.1",
-        "inertiajs/inertia-laravel": "^v0.4.3",
+        "cloudflare/sdk": "^1.3",
+        "guzzlehttp/guzzle": "^7.4.1",
+        "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/cashier": "^12.16",
-        "laravel/framework": "^v8.80.0",
+        "laravel/framework": "^9.0.2",
         "laravel/horizon": "^5.8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1|^3.3.0",
-        "league/glide": "^1.6",
         "pragmarx/google2fa-laravel": "^1.3",
         "predis/predis": "^1.1",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0",
+        "symfony/postmark-mailer": "^6.0",
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.3",
+        "spatie/laravel-ignition": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.1.0",
         "fzaninotto/faker": "^1.9.1",
         "laravel/dusk": "^6.15",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.4"
     },
     "config": {
