--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ yarn-error.log
 .php_cs.cache
 .php-cs-fixer.cache
 /public/js/resources*.js
+/storage/views/header.blade.php
+/storage/views/footer.blade.php
