--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.0.2",
         "ext-json": "*",
+        "aws/aws-sdk-php": "^3.224",
         "cloudflare/sdk": "^1.3",
         "guzzlehttp/guzzle": "^7.4.1",
         "inertiajs/inertia-laravel": "^0.5.4",
