--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
         "laravel/cashier": "^12.16",
         "laravel/framework": "^9.0.2",
         "laravel/horizon": "^5.8",
+        "laravel/octane": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1|^3.3.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "predis/predis": "^1.1",
+        "spiral/roadrunner": "^2.8.2",
         "symfony/http-client": "^6.0",
         "symfony/mailgun-mailer": "^6.0",
         "symfony/postmark-mailer": "^6.0",
