--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9ee803044beb658de1ea",
+    "/css/app.css": "/css/app.css?id=41639892ced7cdee7205"
 }
