--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=1431da8af1971538c7cd",
-    "/css/app.css": "/css/app.css?id=e8dff6de4f81212f4866"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
