--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1|^3.3.0",
         "predis/predis": "^1.1",
+        "spatie/laravel-data": "^1.5",
         "spiral/roadrunner": "^2.8.2",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
