--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,5 +36,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          git add .
           git commit -m "Run Laravel Mix en build front-end assets"
           git push origin
