--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    name: Pest
+    name: Pest (PHP ${{ matrix.php }} – ${{ matrix.os }})
     strategy:
       fail-fast: true
       matrix:
