--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,7 +3,7 @@ name: Run tests & build files
 on:
   push:
     branches:
-      - 131-set-up-github-action-for-ploi-core
+      - master
 
 jobs:
   test:
