--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,6 +11,7 @@ jobs:
     uses: ./.github/workflows/run-tests.yml
 
   deploy:
+    needs: test
     name: Prepare build assets
     runs-on: ubuntu-latest
     steps:
