--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "production": "mix --production"
+        "development": "vite",
+        "prod": "npm run production",
+        "production": "vite build"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -15,11 +13,13 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
+        "@vitejs/plugin-vue2": "^1.1.2",
         "autoprefixer": "^10.4.0",
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.41",
+        "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.15",
         "portal-vue": "^2.1.7",
         "postcss": "^8.4.5",
@@ -28,6 +28,7 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^3.0.7",
         "v-click-outside": "^3.1.2",
+        "vite": "^3.0.2",
         "vue": "^2.6.11",
         "vue-clipboard2": "^0.3.1",
         "vue-loader": "^15.9.8",
