--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^6.0.41",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.15",
         "portal-vue": "^2.1.7",
         "postcss": "^8.4.5",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "sass": "^1.53.0",
         "sass-loader": "^8.0.0",
         "tailwindcss": "^3.0.7",
         "v-click-outside": "^3.1.2",
         "vite": "^3.0.2",
-        "vue": "^2.6.11",
+        "vue": "^2.7",
         "vue-clipboard2": "^0.3.1",
         "vue-loader": "^15.9.8",
         "vue-meta": "^2.4.0",
@@ -37,6 +36,7 @@
         "vuex": "^3.6.2"
     },
     "dependencies": {
+        "@rollup/plugin-commonjs": "^21.0",
         "vue-simplemde": "^2.0.0"
     }
 }
