--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,5 +37,5 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add .
-          git commit -m "Run Laravel Mix en build front-end assets"
+          git commit -m "Updated build assets"
           git push origin
