--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "ploi-core",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -13,6 +14,7 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
+        "@types/node": "^18.0.6",
         "@vitejs/plugin-vue2": "^1.1.2",
         "autoprefixer": "^10.4.0",
         "axios": "^0.21.1",
