--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0.3",
+        "esbuild-darwin-arm64": "^0.14.49",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.15",
         "portal-vue": "^2.1.7",
