--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.53.0",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^3.0.7",
+        "tailwindcss": "^3.1.6",
         "v-click-outside": "^3.1.2",
         "vite": "^3.0.2",
         "vue": "^2.7",
@@ -39,7 +39,6 @@
         "vuex": "^3.6.2"
     },
     "dependencies": {
-        "@rollup/plugin-commonjs": "^21.0",
-        "vue-simplemde": "^2.0.0"
+        "@rollup/plugin-commonjs": "^21.0"
     }
 }
