--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@tailwindcss/typography": "^0.5.0",
         "@types/node": "^18.0.6",
         "@vitejs/plugin-vue2": "^1.1.2",
-        "autoprefixer": "^10.4.0",
+        "@rollup/plugin-commonjs": "^21.0",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0.3",
@@ -39,6 +40,6 @@
         "vuex": "^3.6.2"
     },
     "dependencies": {
-        "@rollup/plugin-commonjs": "^21.0"
+
     }
 }
