--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         "php": "^8.0.2",
         "ext-json": "*",
         "aws/aws-sdk-php": "^3.224",
+        "calebporzio/sushi": "^2.4",
         "cloudflare/sdk": "^1.3",
         "doctrine/dbal": "^3.3",
-        "filament/filament": "^2.0",
+        "filament/filament": "^2.15.13",
         "guzzlehttp/guzzle": "^7.4.1",
         "inertiajs/inertia-laravel": "^0.6.3",
         "laragear/two-factor": "^1.1",
@@ -27,6 +28,7 @@
         "predis/predis": "^1.1",
         "spatie/laravel-data": "^1.5.1",
         "spiral/roadrunner": "^2.8.2",
+        "stechstudio/filament-impersonate": "^2.5",
         "symfony/http-client": "^6.0",
         "symfony/mailgun-mailer": "^6.0",
         "symfony/postmark-mailer": "^6.0",
@@ -90,5 +92,6 @@
             "@php artisan horizon:publish",
             "@php artisan filament:upgrade"
         ]
-    }
+    },
+    "repositories": []
 }
