--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
     "private": true,
     "scripts": {
         "watch": "npm run development",
+        "watch:filament": "npm run dev:filament",
         "dev": "npm run development",
         "development": "vite",
+        "dev:filament": "TAILWIND_CONFIG=filament vite",
         "prod": "npm run production",
-        "production": "vite build"
+        "production": "vite build",
+        "prod:filament": "TAILWIND_CONFIG=filament vite build"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue": "^0.7.1",
         "@inertiajs/progress": "^0.2.6",
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.0",
+        "@rollup/plugin-commonjs": "^21.0",
+        "@tailwindcss/forms": "^0.4.1",
+        "@tailwindcss/typography": "^0.5.4",
         "@types/node": "^18.0.6",
         "@vitejs/plugin-vue2": "^1.1.2",
-        "@rollup/plugin-commonjs": "^21.0",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.8",
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
         "cross-env": "^7.0.3",
@@ -30,7 +33,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.53.0",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^3.1.6",
+        "tailwindcss": "^3.1.8",
+        "tippy.js": "^6.3.7",
         "v-click-outside": "^3.1.2",
         "vite": "^3.0.2",
         "vue": "^2.7",
@@ -39,8 +43,5 @@
         "vue-meta": "^2.4.0",
         "vue-template-compiler": "^2.6.11",
         "vuex": "^3.6.2"
-    },
-    "dependencies": {
-
     }
 }
