--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@inertiajs/inertia": "^0.10.0",
-        "@inertiajs/inertia-vue": "^0.7.1",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.6",
         "@rollup/plugin-commonjs": "^21.0",
         "@tailwindcss/forms": "^0.4.1",
         "@tailwindcss/typography": "^0.5.4",
         "@types/node": "^18.0.6",
-        "@vitejs/plugin-vue2": "^1.1.2",
+        "@vitejs/plugin-vue": "^3.0",
+        "@vue/compat": "^3.1.0",
+        "@vue/compiler-sfc": "^3.1.0",
         "autoprefixer": "^10.4.8",
         "axios": "^0.21.1",
         "balloon-css": "^1.2.0",
@@ -28,7 +30,7 @@
         "esbuild-darwin-arm64": "^0.14.49",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.15",
-        "portal-vue": "^2.1.7",
+        "mitt": "^3.0.0",
         "postcss": "^8.4.5",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.53.0",
@@ -37,11 +39,10 @@
         "tippy.js": "^6.3.7",
         "v-click-outside": "^3.1.2",
         "vite": "^3.0.2",
-        "vue": "^2.7",
+        "vue": "^3.1.0",
         "vue-clipboard2": "^0.3.1",
-        "vue-loader": "^15.9.8",
+        "vue-loader": "^16.0.0",
         "vue-meta": "^2.4.0",
-        "vue-template-compiler": "^2.6.11",
-        "vuex": "^3.6.2"
+        "vuex": "^4.0.2"
     }
 }
