--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
         "lodash": "^4.17.15",
         "mitt": "^3.0.0",
         "postcss": "^8.4.5",
+        "portal-vue": "^3.0.0-beta.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.53.0",
         "sass-loader": "^8.0.0",
         "tailwindcss": "^3.1.8",
         "tippy.js": "^6.3.7",
-        "v-click-outside": "^3.1.2",
+        "v-click-outside": "^3.2.0",
         "vite": "^3.0.2",
         "vue": "^3.1.0",
         "vue-clipboard2": "^0.3.1",
         "vue-loader": "^16.0.0",
-        "vue-meta": "^2.4.0",
         "vuex": "^4.0.2"
     }
 }
