--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1|^3.3.0",
         "predis/predis": "^1.1",
+        "saade/filament-laravel-log": "^1.1",
         "spatie/laravel-data": "^1.5.1",
         "spiral/roadrunner": "^2.8.2",
         "stechstudio/filament-impersonate": "^2.5",
