--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "production": "vite build",
         "prod:filament": "TAILWIND_CONFIG=filament vite build",
         "production:filament": "TAILWIND_CONFIG=filament vite build",
-        "production:all" : "vite build && TAILWIND_CONFIG=filament vite build"
+        "production:all" : "vite build && TAILWIND_CONFIG=filament vite build",
+        "build" : "vite build && TAILWIND_CONFIG=filament vite build"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
