--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.6",
         "@rollup/plugin-commonjs": "^21.0",
         "@tailwindcss/forms": "^0.4.1",
         "@tailwindcss/typography": "^0.5.10",
@@ -22,14 +21,14 @@
         "@vue/compat": "^3.1.0",
         "@vue/compiler-sfc": "^3.1.0",
         "autoprefixer": "^10.4.16",
-        "axios": "^0.21.1",
+        "axios": "^1.5.1",
         "balloon-css": "^1.2.0",
         "click-outside-vue3": "^4.0.1",
         "cross-env": "^7.0.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.15",
         "mitt": "^3.0.0",
-        "portal-vue": "^3.0.0-beta.0",
+        "portal-vue": "^3.0.0",
         "postcss": "^8.4.30",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.53.0",
