--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "calebporzio/sushi": "^2.4",
         "cloudflare/sdk": "^1.3",
         "doctrine/dbal": "^3.3",
-        "filament/filament": "^3.0.62",
+        "filament/filament": "^v3.2.131",
         "guzzlehttp/guzzle": "^7.4.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laragear/two-factor": "^2.1.0",
