--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^2.0.0",
+        "@vitejs/plugin-vue": "^5.0.4",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
@@ -24,7 +26,7 @@
         "balloon-css": "^1.2.0",
         "click-outside-vue3": "^4.0.1",
         "cross-env": "^7.0.3",
-        "laravel-vite-plugin": "^1.0.0",
+        "laravel-vite-plugin": "^1.1.1",
         "lodash": "^4.17.15",
         "mitt": "^3.0.0",
         "portal-vue": "^3.0.0",
@@ -35,15 +37,11 @@
         "tailwindcss": "^3.4.17",
         "tippy.js": "^6.3.7",
         "v-click-outside": "^3.2.0",
-        "vite": "^5.4.6",
+        "vite": "^6.0.3",
         "vue": "^3.5.13",
         "vue-clipboard2": "^0.3.1",
         "vue-loader": "^17.4.2",
         "vuex": "^4.1.0"
     },
-    "type": "module",
-    "dependencies": {
-        "@inertiajs/vue3": "^2.0.0",
-        "@vitejs/plugin-vue": "^5.0.4"
-    }
+    "type": "module"
 }
