--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.1.0",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.23",
         "laravel/dusk": "^8.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^8.1",
